What's New for FreeImage

* : fixed
- : removed
! : changed
+ : added

Month day, 2011 - 3.15.2
! FreeImage now uses LibRaw 0.14.3
! FreeImage now uses LibPNG 1.5.6
+ [Herve Drolon] added new Exif maker note tags
* [Mylek Grey] enabled the use of multi-component transforms (MCT) in J2K and JP2 saving
* [Herve Drolon] refactored PluginICO in order to correctly support Windows Vista 256x256 icons
* [Herve Drolon] added minor speed improvements to FreeImage_Rescale
* [Herve Drolon] fixed dib allocation failing with very large images (i.e. more than 4GB)
* [Herve Drolon] fixed FreeImage_CloneTag behavior with ASCII data handling

July 25th, 2011 - 3.15.1
! FreeImage now uses LibRaw 0.13.7
! FreeImage now uses LibPNG 1.5.4
! FreeImage now uses LibTIFF 3.9.5
! FreeImage now uses OpenJPEG 1.5.0 (SVN patch 2011-07-23)
+ [Herve Drolon] added FreeImage_ConvertToRGB16 and updated FreeImage_ConvertToType
+ [Herve Drolon] added RAW_HALFSIZE flag to RAW plugin
* [Herve Drolon] fixed a memory leak in JPEG plugin occuring when loading some corrupted images
* [Eberhard Mattes] improved thread safety behavior inside internal TagLib class
* [Hew How Chee] fixed a bug in FreeImage_EnlargeCanvas when called with negative left and right parameters and bpp <= 4
* [Herve Drolon] improved memory allocation checking in FreeImage_ConvertTo[Float/RGBF/UINT16]
* [Herve Drolon] allowed loading of TIF with missing bitspersample/samplesperpixel/photometric tags
* [Herve Drolon] fixed FreeImage_AllocateHeaderT against possible malloc overflow
* [Herve Drolon] fixed CUT plugin against heap corruption vulnerability
* [Herve Drolon] fixed BMP plugin for images with a truncated input data stream
* [Herve Drolon] improved PCX format detection in FreeImage_GetFileType* functions
* [Christian Heimes] fixed a TIFF G4 compression bug occuring with gcc-Version 4.1.2 20080704 (Red Hat 4.1.2-50)

January 24th, 2011 - 3.15.0
! FreeImage now uses LibRaw 0.13-Beta3
! FreeImage now uses LibPNG 1.4.5